--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "@google/genai": "^1.27.0",
-    "firebase": "^12.4.0"
+    "@supabase/supabase-js": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
